# fastapi-todo

./: .gitignore  docker-compose.yml  env_example  main.py  pyproject.toml
app/: config.py
app/depends/: user_depends.py
app/schemas/: todo_schemas.py  user_schemas.py
app/services/: todo_services.py  user_services.py
app/utils/: constants.py  date_utils.py  error_messages.py  exceptions.py  token_utils.py
database/: config.py  models.py
migrations/: env.py
migrations/versions/: 2023_11_16_1744-e47a4448e65c_initial.py  2023_11_16_1753-f3de4755866f_add_usermodel.py  2023_11_29_1646-3cd2928ba605_add_todomodel_and_relationship_todo_user.py  2023_11_29_1924-e4664a063ebf_update_todomodel.py
routes/: todo_routes.py  user_routes.py
